@@ -1,6 +1,6 @@
 Package: arm
-Version: 1.4-08
-Date: 2011-4-24
+Version: 1.4-10.01
+Date: 2011-5-9
 Title: Data Analysis Using Regression and Multilevel/Hierarchical Models
 Author: Andrew Gelman <gelman@stat.columbia.edu>,
         Yu-Sung Su <suyusung@tsinghua.edu.cn>,
